--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.21"
+    "joi": "^17.4.0",
+    "joi-objectid": "^3.0.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.6"
   }
 }
