--- a/Book App.postman_collection.json
+++ b/Book App.postman_collection.json
@@ -462,6 +462,44 @@
 						}
 					},
 					"response": []
+				},
+				{
+					"name": "Get All books by Genre",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": "http://localhost:4000/v1/book/genre/:id?limit=5&offset=0",
+							"protocol": "http",
+							"host": [
+								"localhost"
+							],
+							"port": "4000",
+							"path": [
+								"v1",
+								"book",
+								"genre",
+								":id"
+							],
+							"query": [
+								{
+									"key": "limit",
+									"value": "5"
+								},
+								{
+									"key": "offset",
+									"value": "0"
+								}
+							],
+							"variable": [
+								{
+									"key": "id",
+									"value": "608991fb947d04507301e44a"
+								}
+							]
+						}
+					},
+					"response": []
 				}
 			]
 		}
